# DSH-Gallery-7269

./: README.md  about.html  gallery.html  index.html  settings.html  signup.html  trash.html
assets/I Love You/: desktop.ini
assets/I Love You/Class falo/: desktop.ini
backend/: app.py  backup.py  database.py  requirements.txt  restore.py  schema.sql  test_app.py
backend/go_backend/: go.mod  main.go
backend/kotlin_backend/: build.gradle.kts
backend/kotlin_backend/src/main/kotlin/: Application.kt
backend/rust_backend/: Cargo.toml
backend/rust_backend/src/: db.rs  handlers.rs  main.rs
css/: signup.css  style.css
database/: gallery.db
frontend/: id-info.html  ids.html  login.html
frontend/css/: login.css
frontend/js/: login.js  main.js  trash.js
js/: gallery.js  settings.js  signup.js
