[package]
name = "gallery_backend"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4"
actix-multipart = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rusqlite = { version = "0.29", features = ["bundled"] }
tokio = { version = "1", features = ["rt-multi-thread","macros"] }
zip = "0.6"
walkdir = "2.3"
anyhow = "1.0"
sanitate-filename = "0.5"
chrono = { version = "0.4", features = ["serde"] }